# competitive-programming

./: CMakeLists.txt  README.md
01Knapsack/: 01knapsack.cpp  01knapsack.h  CMakeLists.txt  Readme.md  tests.cpp
BinarySearchTree/: CMakeLists.txt  bst.h  bst.tpp  bst_inorder_iterator.h  bst_utils.h  unit_tests.cpp
CoinChange/: CMakeLists.txt  Readme.md  coin_change.cpp  coin_change.h  tests.cpp
CountingInversions/: CMakeLists.txt  Readme.md  countinginversions.cpp  countinginversions.h  tests.cpp
FenwickTree/: CMakeLists.txt  fenwicktree.h  fenwicktree.tpp  unit_tests.cpp
GoldMineProblem/: CMakeLists.txt  Readme.md  gold_mine_problem.h  gold_mine_problem.tpp  tests.cpp
HouseRobber/: CMakeLists.txt  Readme.md  houserobber.cpp  houserobber.h  tests.cpp
KadanesAlgorithm/: CMakeLists.txt  Readme.md  kadanesalgorithm.cpp  kadanesalgorithm.h  tests.cpp
LongTermProblem/: CMakeLists.txt  longtermproblem.cpp  longtermproblem.h  tests.cpp
LongestKGoodSegment/: CMakeLists.txt  Readme.md  longestkgoodsegment.cpp  longestkgoodsegment.h  tests.cpp
MaxSegmentIntersections/: CMakeLists.txt  Readme.md  maxsegmentintersections.cpp  maxsegmentintersections.h  tests.cpp
MaximumPathSum/: CMakeLists.txt  Readme.md  maximum_path_sum.cpp  maximum_path_sum.h  tests.cpp
MinimumCostPath/: CMakeLists.txt  Readme.md  minimum_cost_path.h  minimum_cost_path.tpp  tests.cpp
MissingNumber/: CMakeLists.txt  Readme.md  missingnumber.cpp  missingnumber.h  tests.cpp
NestedSegments/: CMakeLists.txt  Readme.md  nestedsegments.cpp  nestedsegments.h  tests.cpp
NextLargerElement/: CMakeLists.txt  Readme.md  nextlargerelement.cpp  nextlargerelement.h  tests.cpp
RodCutting/: CMakeLists.txt  Readme.md  rodcutting.cpp  rodcutting.h  tests.cpp
SegmentTree/: CMakeLists.txt  segment_tree.h  segment_tree.tpp  unit_tests.cpp
SlidingWindowMaximum/: CMakeLists.txt  Readme.md  slidingwindowmaximum.cpp  slidingwindowmaximum.h  slidingwindowmaximum.tpp  tests.cpp
SubsetSum/: CMakeLists.txt  Readme.md  subset_sum.cpp  subset_sum.h  tests.cpp
TheConvexHull/latex/: bibliography.bib  main.tex
TheConvexHull/latex/code/: chan.cpp  chan_binary_search.cpp  findhull.cpp  grahamscan.cpp  incremental.cpp  jarvismarch.cpp  kirk.cpp  monotonechain.cpp  preparata.cpp  preparata_merge.cpp  preparata_upper_bridge.cpp  quickhull.cpp  test.cpp
TheConvexHull/sourcecode/: CMakeLists.txt  Readme.md
TheConvexHull/sourcecode/Chan/: CMakeLists.txt  chan.cpp  chan.h  tests.cpp
TheConvexHull/sourcecode/GrahamScan/: CMakeLists.txt  grahamscan.cpp  grahamscan.h  tests.cpp
TheConvexHull/sourcecode/Incremental/: CMakeLists.txt  incremental.cpp  incremental.h  tests.cpp
TheConvexHull/sourcecode/JarvisMarch/: CMakeLists.txt  jarvismarch.cpp  jarvismarch.h  tests.cpp
TheConvexHull/sourcecode/KirkpatrickSeidel/: CMakeLists.txt  kirkpatrick_seidel.cpp  kirkpatrick_seidel.h  tests.cpp
TheConvexHull/sourcecode/MonotoneChain/: CMakeLists.txt  monotonechain.cpp  monotonechain.h  tests.cpp
TheConvexHull/sourcecode/Preparata/: CMakeLists.txt  preparata.cpp  preparata.h  tests.cpp
TheConvexHull/sourcecode/QuickHull/: CMakeLists.txt  quickhull.cpp  quickhull.h  tests.cpp
TheConvexHull/sourcecode/testsuite/: testsuite.cpp  testsuite.h
TheConvexHull/sourcecode/utils/: point.cpp  point.h  utils.cpp  utils.h
TilingProblem/: CMakeLists.txt  Readme.md  tests.cpp  tiling_problem.cpp  tiling_problem.h
Towers/: CMakeLists.txt  Readme.md  tests.cpp  towers.cpp  towers.h
TrappingRainWater/: CMakeLists.txt  Readme.md  main.cpp  tests.cpp  trappingrainwater.cpp  trappingrainwater.h
TrappingRainWater/testcases/: testcase1.txt
